postgres-macros/tests/fail-nightly/enum_variant_mismatch.stderr
error[E0277]: the trait bound `User: FromRow<Struct<(StructColumn<i64, "id">, StructColumn<sqlm_postgres::types::Enum<(EnumVariant<"admin">, EnumVariant<"user">)>, "role">)>>` is not satisfied
  --> tests/fail-nightly/enum_variant_mismatch.rs:23:59
   |
23 |     let _: Vec<User> = sql!("SELECT id, role FROM users").await.unwrap();
   |                                                          -^^^^^ the trait `FromRow<Struct<(StructColumn<i64, "id">, StructColumn<sqlm_postgres::types::Enum<(EnumVariant<"admin">, EnumVariant<"user">)>, "role">)>>` is not implemented for `User`
   |                                                          |
   |                                                          help: remove the `.await`
   |
   = help: the trait `FromRow<Struct<(StructColumn<<i64 as SqlType>::Type, "id">, StructColumn<<Role as SqlType>::Type, "role">)>>` is implemented for `User`
   = note: required for `Vec<User>` to implement `Query<Struct<(StructColumn<i64, "id">, StructColumn<sqlm_postgres::types::Enum<(EnumVariant<"admin">, EnumVariant<"user">)>, "role">)>>`
   = note: required for `Sql<'_, Struct<(StructColumn<i64, "id">, StructColumn<Enum<(EnumVariant<"admin">, ...)>, "role">)>, ...>` to implement `IntoFuture`
